--- a/contact.html
+++ b/contact.html
@@ -273,7 +273,7 @@
                     <div>
                         <h2 class="text-2xl font-bold text-white mb-8">Send Me a Message</h2>
                         
-                        <form class="space-y-6" action="#" method="POST">
+                        <form class="space-y-6" action="https://formspree.io/f/mzzaykay" method="POST">
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                 <div>
                                     <label for="name" class="block text-sm font-medium text-gray-300 mb-2">Name</label>
@@ -308,16 +308,6 @@
                                 <i class="fas fa-paper-plane mr-2"></i>Send Message
                             </button>
                         </form>
-                        
-                        <div class="mt-6 p-4 bg-yellow-900/20 border border-yellow-500/30 rounded-lg">
-                            <div class="flex items-center">
-                                <i class="fas fa-info-circle text-yellow-500 mr-3"></i>
-                                <p class="text-yellow-300 text-sm">
-                                    Note: This form is for demonstration purposes. To actually send a message, 
-                                    please use the email link above or contact me directly.
-                                </p>
-                            </div>
-                        </div>
                     </div>
                 </div>
 
@@ -447,15 +437,6 @@
             if (mobileMenuButton && mobileMenu) {
                 mobileMenuButton.addEventListener('click', function() {
                     mobileMenu.classList.toggle('hidden');
-                });
-            }
-
-            // Form submission handler
-            const form = document.querySelector('form');
-            if (form) {
-                form.addEventListener('submit', function(e) {
-                    e.preventDefault();
-                    alert('Thank you for your message! Please contact me directly via email for now.');
                 });
             }
         });
