--- a/contact/index.html
+++ b/contact/index.html
@@ -156,18 +156,18 @@
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-4">
                 <!-- Logo -->
-                <a href="index.html" class="flex items-center space-x-2">
+                <a href="/" class="flex items-center space-x-2">
                     <span class="text-xl font-bold text-white">Muthuraja S</span>
                 </a>
 
                 <!-- Desktop Navigation -->
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="about.html" class="nav-link">About</a>
-                    <a href="resume.html" class="nav-link">Resume</a>
-                    <a href="timeline.html" class="nav-link">Timeline</a>
-                    <a href="projects.html" class="nav-link">Projects</a>
-                    <a href="contact.html" class="nav-link active">Contact</a>
+                    <a href="/" class="nav-link">Home</a>
+                    <a href="/about/" class="nav-link">About</a>
+                    <a href="/resume/" class="nav-link">Resume</a>
+                    <a href="/timeline/" class="nav-link">Timeline</a>
+                    <a href="/projects/" class="nav-link">Projects</a>
+                    <a href="/contact/" class="nav-link active">Contact</a>
                 </div>
 
                 <!-- Mobile menu button -->
@@ -181,12 +181,12 @@
             <!-- Mobile Navigation -->
             <div id="mobile-menu" class="md:hidden hidden pb-4">
                 <div class="space-y-2">
-                    <a href="index.html" class="mobile-nav-link">Home</a>
-                    <a href="about.html" class="mobile-nav-link">About</a>
-                    <a href="resume.html" class="mobile-nav-link">Resume</a>
-                    <a href="timeline.html" class="mobile-nav-link">Timeline</a>
-                    <a href="projects.html" class="mobile-nav-link">Projects</a>
-                    <a href="contact.html" class="mobile-nav-link active">Contact</a>
+                    <a href="/" class="mobile-nav-link">Home</a>
+                    <a href="/about/" class="mobile-nav-link">About</a>
+                    <a href="/resume/" class="mobile-nav-link">Resume</a>
+                    <a href="/timeline/" class="mobile-nav-link">Timeline</a>
+                    <a href="/projects/" class="mobile-nav-link">Projects</a>
+                    <a href="/contact/" class="mobile-nav-link active">Contact</a>
                 </div>
             </div>
         </nav>
@@ -274,7 +274,7 @@
                         <h2 class="text-2xl font-bold text-white mb-8">Send Me a Message</h2>
                         
                         <form class="space-y-6" action="https://formspree.io/f/mzzaykay" method="POST">
-                            <input type="hidden" name="_next" value="https://black-and-yellow.github.io/Portfolio_Website/contact.html?success=true">
+                            <input type="hidden" name="_next" value="https://black-and-yellow.github.io/Portfolio_Website/contact/?success=true">
                             <input type="hidden" name="_subject" value="New Portfolio Contact Form Submission">
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                 <div>
@@ -326,7 +326,7 @@
                                class="bg-red-600 hover:bg-red-700 text-white px-8 py-3 rounded-lg font-semibold transition-all duration-300 transform hover:scale-105">
                                 <i class="fas fa-envelope mr-2"></i>Email Me
                             </a>
-                            <a href="resume.html" 
+                            <a href="/resume/" 
                                class="border-2 border-cyan-500 text-cyan-500 hover:bg-cyan-500 hover:text-black px-8 py-3 rounded-lg font-semibold transition-all duration-300 transform hover:scale-105">
                                 <i class="fas fa-file-alt mr-2"></i>View Resume
                             </a>
@@ -355,10 +355,10 @@
                 <div>
                     <h3 class="text-lg font-semibold mb-4 text-white">Quick Links</h3>
                     <div class="space-y-2">
-                        <a href="index.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Home</a>
-                        <a href="about.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">About</a>
-                        <a href="resume.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Resume</a>
-                        <a href="projects.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Projects</a>
+                        <a href="/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Home</a>
+                        <a href="/about/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">About</a>
+                        <a href="/resume/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Resume</a>
+                        <a href="/projects/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Projects</a>
                     </div>
                 </div>
                 
