--- a/timeline/index.html
+++ b/timeline/index.html
@@ -309,18 +309,18 @@
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-4">
                 <!-- Logo -->
-                <a href="index.html" class="flex items-center space-x-2">
+                <a href="/" class="flex items-center space-x-2">
                     <span class="text-xl font-bold text-white">Muthuraja S</span>
                 </a>
 
                 <!-- Desktop Navigation -->
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="about.html" class="nav-link">About</a>
-                    <a href="resume.html" class="nav-link">Resume</a>
-                    <a href="timeline.html" class="nav-link active">Timeline</a>
-                    <a href="projects.html" class="nav-link">Projects</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="/" class="nav-link">Home</a>
+                    <a href="/about/" class="nav-link">About</a>
+                    <a href="/resume/" class="nav-link">Resume</a>
+                    <a href="/timeline/" class="nav-link active">Timeline</a>
+                    <a href="/projects/" class="nav-link">Projects</a>
+                    <a href="/contact/" class="nav-link">Contact</a>
                 </div>
 
                 <!-- Mobile menu button -->
@@ -334,12 +334,12 @@
             <!-- Mobile Navigation -->
             <div id="mobile-menu" class="md:hidden hidden pb-4">
                 <div class="space-y-2">
-                    <a href="index.html" class="mobile-nav-link">Home</a>
-                    <a href="about.html" class="mobile-nav-link">About</a>
-                    <a href="resume.html" class="mobile-nav-link">Resume</a>
-                    <a href="timeline.html" class="mobile-nav-link active">Timeline</a>
-                    <a href="projects.html" class="mobile-nav-link">Projects</a>
-                    <a href="contact.html" class="mobile-nav-link">Contact</a>
+                    <a href="/" class="mobile-nav-link">Home</a>
+                    <a href="/about/" class="mobile-nav-link">About</a>
+                    <a href="/resume/" class="mobile-nav-link">Resume</a>
+                    <a href="/timeline/" class="mobile-nav-link active">Timeline</a>
+                    <a href="/projects/" class="mobile-nav-link">Projects</a>
+                    <a href="/contact/" class="mobile-nav-link">Contact</a>
                 </div>
             </div>
         </nav>
@@ -493,11 +493,11 @@
                 <div>
                     <h3 class="text-lg font-semibold mb-4 text-white">Quick Links</h3>
                     <div class="space-y-2">
-                        <a href="index.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Home</a>
-                        <a href="about.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">About</a>
-                        <a href="resume.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Resume</a>
-                        <a href="projects.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Projects</a>
-                        <a href="contact.html" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Contact</a>
+                        <a href="/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Home</a>
+                        <a href="/about/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">About</a>
+                        <a href="/resume/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Resume</a>
+                        <a href="/projects/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Projects</a>
+                        <a href="/contact/" class="block text-gray-400 hover:text-red-500 transition-colors duration-300">Contact</a>
                     </div>
                 </div>
                 
