--- a/about/index.html
+++ b/about/index.html
@@ -251,9 +251,9 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                     <!-- Content -->
                     <div>
-                        <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">
-                            About <span class="text-red-500">Me</span>
-                        </h1>
+                        <h1 class="text-4xl md:text-6xl font-bold mb-6 text-white">
+                                About <span class="text-red-500" id="name-typewriter">Me</span>
+                            </h1>
                         
                         <div class="space-y-6 text-lg text-gray-300">
                             <p>
@@ -470,6 +470,7 @@
 
     <!-- Scripts -->
     <script src="/public/js/main.js"></script>
+    <script src="/public/js/simple-animations.js"></script>
     
     <!-- Cyberpunk Cursor Script -->
     <script>
