--- a/contact/index.html
+++ b/contact/index.html
@@ -197,9 +197,9 @@
         <section class="py-20">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-16">
-                    <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">
-                        Get In <span class="text-red-500">Touch</span>
-                    </h1>
+                    <h1 class="text-4xl md:text-6xl font-bold mb-6 text-white">
+                                Get in <span class="text-red-500" id="name-typewriter"> Touch </span>
+                            </h1>
                     <p class="text-lg text-gray-400 max-w-2xl mx-auto">
                         Let's discuss opportunities, collaborations, or just have a chat about technology and development.
                     </p>
@@ -390,6 +390,8 @@
 
     <!-- Scripts -->
     <script src="/public/js/main.js"></script>
+    <script src="/public/js/simple-animations.js"></script>
+    <script src="/public/js/contact.js"></script>
     <!-- Cyberpunk Cursor Script -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
