--- a/projects/index.html
+++ b/projects/index.html
@@ -185,9 +185,9 @@
         <section class="py-20">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-16">
-                    <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">
-                        My <span class="text-red-500">Projects</span>
-                    </h1>
+                    <h1 class="text-4xl md:text-6xl font-bold mb-6 text-white">
+                                My <span class="text-red-500" id="name-typewriter">Projects</span>
+                            </h1>
                     <p class="text-lg text-gray-400 max-w-2xl mx-auto">
                         Here are some of the projects I've worked on, showcasing my skills in full-stack development and problem-solving.
                     </p>
@@ -343,7 +343,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="public/js/main.js"></script>
+    <script src="/public/js/main.js"></script>
+    <script src="/public/js/simple-animations.js"></script>
     
     <!-- Cyberpunk Cursor Script -->
     <script>
